# hive

./: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json  dev.js  notes  notes.md  notes_.md  package.json  readme.md
source/: CMakeLists.txt
source/electron_frontend/: CMakeLists.txt  hive_frontend.cpp  hive_frontend_entry.js
source/electron_frontend/ui/: ui_entry.js
source/frontend/: CMakeLists.txt  hive_frontend.cpp  hive_frontend_entry.cjs  hive_frontend_entry.js  interfaces.hpp
source/frontend/ui/: ui_entry.html
source/samples/: hello_world.cpp  platformer.cpp
source/shader/: box.frag  box.vec  box.vert
source/shader/compute/: apply.comp  clear.comp  integrate.comp  integrate_pos.comp  integrate_vel.comp  locate.comp  test.comp  test.glsl
source/tools/: build.components.js  cpp.data.js  cpp.hcg  prop_parser.py  util.functions.js
source/webassembly/: CMakeLists.txt  hive_dev.node  hive_frontend_entry.cjs  hive_webassembly.cpp  interfaces.hpp
tools/: build.webgl.components.js  build_webgl_components.py  compiler_runner.js  cpp.data.js  cpp.hcg  prop_parser.py  util.functions.js
workspaces/: hive.code-workspace
